updated binary collection to be able to handle different data types by exposing native python io object

--- a/example/Demo_Binary_Collection.ipynb
+++ b/example/Demo_Binary_Collection.ipynb
@@ -25,7 +25,8 @@
     "from ndi.database.file_system import BinaryCollection\n",
     "from ndi.database.query import Query as Q, AndQuery, OrQuery\n",
     "from ndi.database.utils import print_everything_in, destroy_everything_in\n",
-    "from sqlalchemy import and_, or_"
+    "from sqlalchemy import and_, or_\n",
+    "import struct"
    ]
   },
   {
@@ -79,74 +80,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws = doc.binary.write_stream()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ws.open()\n",
+    "ws = doc.binary.open_write_stream()\n",
     "for i in range(5):\n",
-    "    ws.write(i*2)\n",
+    "    ws.write(struct.pack('d', i))\n",
     "for i in reversed(range(11)):\n",
-    "    ws.write(i)\n",
+    "    ws.write(struct.pack('d', i))\n",
     "ws.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 2. 4. 6. 8.]\n",
+      "[0. 1. 2. 3. 4.]\n",
       "[10.  9.  8.  7.]\n",
-      "pointer at index 9\n",
+      "pointer at index 72\n",
       "[6. 5. 4. 3. 2. 1. 0.]\n"
      ]
     }
    ],
    "source": [
-    "rs = doc.binary.read_stream()\n",
-    "rs.open()\n",
-    "print(rs.read(size=5))\n",
-    "print(rs.read(size=4))\n",
+    "rs = doc.binary.open_read_stream()\n",
+    "print(np.frombuffer(rs.read(40)))\n",
+    "print(np.frombuffer(rs.read(32)))\n",
     "print(f'pointer at index {rs.tell()}')\n",
-    "print(rs.read(size=-1))\n",
+    "print(np.frombuffer(rs.read()))\n",
     "rs.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with doc.binary.write_stream() as ws:\n",
+    "with doc.binary.open_write_stream() as ws:\n",
     "    for i in [3.425,4.34,5345,.453,542.,45]:\n",
-    "        ws.write(i)"
+    "        ws.write(struct.pack('d', i))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -158,8 +142,8 @@
     }
    ],
    "source": [
-    "with doc.binary.read_stream() as rs:\n",
-    "    print(rs.read(-1))"
+    "with doc.binary.open_read_stream() as rs:\n",
+    "    print(np.frombuffer(rs.read(-1)))"
    ]
   },
   {
@@ -171,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,20 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 3.,  6.,  9., 12., 15., 18., 21., 24., 27., 30.])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# default args will get all data\n",
     "doc.binary.read_slice()"
@@ -202,20 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 6.,  9., 12., 15.])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# called with start and end indices \n",
     "doc.binary.read_slice(1, 5)"
@@ -223,20 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([18., 21., 24., 27., 30.])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# first positional arg (also kwarg \"start\") only will read to end of file\n",
     "doc.binary.read_slice(5)"
@@ -244,20 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 3.,  6.,  9., 12., 15.])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# default start value is index 0\n",
     "doc.binary.read_slice(end=5)"
@@ -272,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
