set up connect, add methods for add, get, and find

--- a/example/Demo_Binary_Collection.ipynb
+++ b/example/Demo_Binary_Collection.ipynb
@@ -23,7 +23,7 @@
     "from ndi import Experiment, Document\n",
     "from ndi.database.sql import SQL as Database\n",
     "from ndi.database.file_system import BinaryCollection\n",
-    "from ndi.database.query import Query as Q, AndQuery, OrQuery\n",
+    "from ndi.query import Query as Q, AndQuery, OrQuery\n",
     "from ndi.database.utils import print_everything_in, destroy_everything_in\n",
     "from sqlalchemy import and_, or_\n",
     "import struct"
@@ -158,9 +158,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.4 64-bit ('ndi-python': pipenv)",
    "language": "python",
-   "name": "python3"
+   "name": "python37464bitndipythonpipenv1a7e5035b8354ebf875fc2219ee4cc91"
   },
   "language_info": {
    "codemirror_mode": {
