--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -22,7 +22,8 @@
    "source": [
     "from ndi import Experiment, DaqSystem, FileNavigator\n",
     "from ndi.daqreaders import MockReader\n",
-    "from ndi.database import FileSystem as Database, Query as Q"
+    "from ndi.database import FileSystem as Database\n",
+    "from ndi import Query as Q"
    ]
   },
   {
