--- a/example/Demo_Database_Query.ipynb
+++ b/example/Demo_Database_Query.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ndi.database import Query as Q"
+    "from ndi import Query as Q"
    ]
   },
   {
