--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -44,7 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = Database('postgres://postgres:1Password!@localhost:5432/practice')"
+    "db = Database('postgres://postgres:1Password!@localhost:5432/practice')\n",
+    "destroy_everything_in(db)"
    ]
   },
   {
@@ -103,7 +104,8 @@
     "    Probe('p1', 1, 'ntrode', daq_system_id=daqs[0].id),\n",
     "    Probe('p2', 2, 'ntrode', daq_system_id=daqs[1].id),\n",
     "]\n",
-    "for p in probes: \n",
+    "\n",
+    "for p in probes:\n",
     "    exp.add_probe(p)"
    ]
   },
@@ -115,7 +117,9 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[<ndi.probe.Probe at 0x112cd05b0>,\n",
+       " <ndi.probe.Probe at 0x110ecfd60>,\n",
+       " <ndi.probe.Probe at 0x110f09f70>]"
       ]
      },
      "execution_count": 9,
@@ -137,113 +141,27 @@
       "text/plain": [
        "[{'_metadata': {'name': 'p0',\n",
        "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'abab0d7cd63b4c598e5bd028dadd39d8',\n",
+       "   'experiment_id': 'f9116eb187504ccf8e4ae82bd00f977a',\n",
        "   'parent_id': '',\n",
        "   'asc_path': '',\n",
        "   'version_depth': 0,\n",
        "   'latest_version': True},\n",
        "  '_dependencies': {},\n",
+       "  '_depends_on': [],\n",
        "  'reference': 0,\n",
-       "  'daq_system_id': '186c8931028142e0b1eb1a6e4f44284b',\n",
+       "  'daq_system_id': '35741023fe8a43b9912480ccc92d7346',\n",
        "  'type': 'ntrode'},\n",
        " {'_metadata': {'name': 'p1',\n",
        "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'abab0d7cd63b4c598e5bd028dadd39d8',\n",
+       "   'experiment_id': 'f9116eb187504ccf8e4ae82bd00f977a',\n",
        "   'parent_id': '',\n",
        "   'asc_path': '',\n",
        "   'version_depth': 0,\n",
        "   'latest_version': True},\n",
        "  '_dependencies': {},\n",
+       "  '_depends_on': [],\n",
        "  'reference': 1,\n",
-       "  'daq_system_id': '186c8931028142e0b1eb1a6e4f44284b',\n",
-       "  'type': 'ntrode'},\n",
-       " {'_metadata': {'name': 'p0',\n",
-       "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'abab0d7cd63b4c598e5bd028dadd39d8',\n",
-       "   'parent_id': '',\n",
-       "   'asc_path': '',\n",
-       "   'version_depth': 0,\n",
-       "   'latest_version': True},\n",
-       "  '_dependencies': {},\n",
-       "  'reference': 0,\n",
-       "  'daq_system_id': '54e0b3dbafe04d2eaab8f266ef822b51',\n",
-       "  'type': 'ntrode'},\n",
-       " {'_metadata': {'name': 'p1',\n",
-       "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'abab0d7cd63b4c598e5bd028dadd39d8',\n",
-       "   'parent_id': '',\n",
-       "   'asc_path': '',\n",
-       "   'version_depth': 0,\n",
-       "   'latest_version': True},\n",
-       "  '_dependencies': {},\n",
-       "  'reference': 1,\n",
-       "  'daq_system_id': '54e0b3dbafe04d2eaab8f266ef822b51',\n",
-       "  'type': 'ntrode'},\n",
-       " {'_metadata': {'name': 'p0',\n",
-       "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'abab0d7cd63b4c598e5bd028dadd39d8',\n",
-       "   'parent_id': '',\n",
-       "   'asc_path': '',\n",
-       "   'version_depth': 0,\n",
-       "   'latest_version': True},\n",
-       "  '_dependencies': {},\n",
-       "  'reference': 0,\n",
-       "  'daq_system_id': 'a876a85c0dac4d8f80b5146c42e30cb5',\n",
-       "  'type': 'ntrode'},\n",
-       " {'_metadata': {'name': 'p1',\n",
-       "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'abab0d7cd63b4c598e5bd028dadd39d8',\n",
-       "   'parent_id': '',\n",
-       "   'asc_path': '',\n",
-       "   'version_depth': 0,\n",
-       "   'latest_version': True},\n",
-       "  '_dependencies': {},\n",
-       "  'reference': 1,\n",
-       "  'daq_system_id': 'a876a85c0dac4d8f80b5146c42e30cb5',\n",
-       "  'type': 'ntrode'},\n",
-       " {'_metadata': {'name': 'p0',\n",
-       "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'abab0d7cd63b4c598e5bd028dadd39d8',\n",
-       "   'parent_id': '',\n",
-       "   'asc_path': '',\n",
-       "   'version_depth': 0,\n",
-       "   'latest_version': True},\n",
-       "  '_dependencies': {},\n",
-       "  'reference': 0,\n",
-       "  'daq_system_id': '2b3a04e8423b41669ebb68de13661b13',\n",
-       "  'type': 'ntrode'},\n",
-       " {'_metadata': {'name': 'p1',\n",
-       "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'abab0d7cd63b4c598e5bd028dadd39d8',\n",
-       "   'parent_id': '',\n",
-       "   'asc_path': '',\n",
-       "   'version_depth': 0,\n",
-       "   'latest_version': True},\n",
-       "  '_dependencies': {},\n",
-       "  'reference': 1,\n",
-       "  'daq_system_id': '2b3a04e8423b41669ebb68de13661b13',\n",
-       "  'type': 'ntrode'},\n",
-       " {'_metadata': {'name': 'p0',\n",
-       "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'abab0d7cd63b4c598e5bd028dadd39d8',\n",
-       "   'parent_id': '',\n",
-       "   'asc_path': '',\n",
-       "   'version_depth': 0,\n",
-       "   'latest_version': True},\n",
-       "  '_dependencies': {},\n",
-       "  'reference': 0,\n",
-       "  'daq_system_id': '764562aa5e7045a2b25747faed56a105',\n",
-       "  'type': 'ntrode'},\n",
-       " {'_metadata': {'name': 'p1',\n",
-       "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'abab0d7cd63b4c598e5bd028dadd39d8',\n",
-       "   'parent_id': '',\n",
-       "   'asc_path': '',\n",
-       "   'version_depth': 0,\n",
-       "   'latest_version': True},\n",
-       "  '_dependencies': {},\n",
-       "  'reference': 1,\n",
-       "  'daq_system_id': '764562aa5e7045a2b25747faed56a105',\n",
+       "  'daq_system_id': '35741023fe8a43b9912480ccc92d7346',\n",
        "  'type': 'ntrode'}]"
       ]
      },
@@ -274,7 +192,7 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[<ndi.epoch.Epoch at 0x1137cc8b0>]"
       ]
      },
      "execution_count": 12,
@@ -310,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[<ndi.channel.Channel at 0x1138109a0>]"
       ]
      },
      "execution_count": 14,
@@ -340,32 +258,16 @@
     {
      "data": {
       "text/plain": [
-       "{'probe:3b752d5e95a14bb1a006e11ef15a0c4f': '3b752d5e95a14bb1a006e11ef15a0c4f',\n",
-       " 'probe:eb428de207d744849a04a8779095e060': 'eb428de207d744849a04a8779095e060',\n",
-       " 'probe:2f6832e4c7e249f49be40fd0ae075ab1': '2f6832e4c7e249f49be40fd0ae075ab1',\n",
-       " 'epoch:1e0b60468a98402886f1e6107ce36b37': '1e0b60468a98402886f1e6107ce36b37',\n",
-       " 'channel:6bf219f1c935472eaacc74a5a7486f68': '6bf219f1c935472eaacc74a5a7486f68',\n",
-       " 'doc': 'd056d1563c6f467eabcf2e131c94d254',\n",
-       " 'probe:b51534cda5fa484ea78167bab5e96c30': 'b51534cda5fa484ea78167bab5e96c30',\n",
-       " 'probe:1fc2dd3a11754df9972f5e8312574b24': '1fc2dd3a11754df9972f5e8312574b24',\n",
-       " 'probe:0225f974c5834b95aea35771465e3ddd': '0225f974c5834b95aea35771465e3ddd',\n",
-       " 'epoch:582fc54a2b9a456cb190e6c7a52e3c25': '582fc54a2b9a456cb190e6c7a52e3c25',\n",
-       " 'channel:45e17337514b4193a87344b35c118046': '45e17337514b4193a87344b35c118046',\n",
-       " 'probe:8f04464c31db4e80aa774b1c29a3df7d': '8f04464c31db4e80aa774b1c29a3df7d',\n",
-       " 'probe:524806b0864347dea34e18b2502ee45a': '524806b0864347dea34e18b2502ee45a',\n",
-       " 'probe:12631e8c294649669a764950612b325c': '12631e8c294649669a764950612b325c',\n",
-       " 'epoch:a78dc1900e05422b9ec096fd2126078a': 'a78dc1900e05422b9ec096fd2126078a',\n",
-       " 'channel:39184e209ba64bff8a7ca52ac7ad18fe': '39184e209ba64bff8a7ca52ac7ad18fe',\n",
-       " 'probe:acd03d3919234761b63c747f995e4169': 'acd03d3919234761b63c747f995e4169',\n",
-       " 'probe:93c41db8bc3449f98960abcea9cd5500': '93c41db8bc3449f98960abcea9cd5500',\n",
-       " 'probe:d1f6a951f70946ab9c8a084a30127c7e': 'd1f6a951f70946ab9c8a084a30127c7e',\n",
-       " 'epoch:f4cfac4b525f433d9e1543e1f249052e': 'f4cfac4b525f433d9e1543e1f249052e',\n",
-       " 'channel:1872ebe466254f10a274cf72f9f563b7': '1872ebe466254f10a274cf72f9f563b7',\n",
-       " 'probe:062e9bcb22eb4d458172737a9a400f5b': '062e9bcb22eb4d458172737a9a400f5b',\n",
-       " 'probe:3df56b1389f144e79b3d492318d29628': '3df56b1389f144e79b3d492318d29628',\n",
-       " 'probe:c42feccbc9c34e04a8621614e472c68e': 'c42feccbc9c34e04a8621614e472c68e',\n",
-       " 'epoch:88e26b3512974c05abda353fc0121a9b': '88e26b3512974c05abda353fc0121a9b',\n",
-       " 'channel:419094bd2dea49fcb9ae580654ccbe45': '419094bd2dea49fcb9ae580654ccbe45'}"
+       "{'_metadata': {'name': 'doc',\n",
+       "  'type': 'independent',\n",
+       "  'experiment_id': 'f9116eb187504ccf8e4ae82bd00f977a',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {},\n",
+       " '_depends_on': ['f9116eb187504ccf8e4ae82bd00f977a'],\n",
+       " 'hello': 'world'}"
       ]
      },
      "execution_count": 16,
@@ -374,7 +276,87 @@
     }
    ],
    "source": [
-    "exp.document.dependencies"
+    "exp.ctx.find_by_id(doc.id).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'doc': <ndi.document.Document at 0x11380e430>}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp.current.document.get_dependencies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d0cb939cf6504e4981ce5e0472ef6591\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(doc.id)\n",
+    "doc.delete_self(force=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# accessing exp with current ensures that the experiment is up to date with the database\n",
+    "# is equivalent to ndi_object.refresh()\n",
+    "exp.current.document.get_dependencies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This object has been deleted.'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc.data"
    ]
   },
   {
@@ -386,7 +368,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -394,50 +390,18 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'abab0d7cd63b4c598e5bd028dadd39d8',\n",
+       "  'experiment_id': 'f9116eb187504ccf8e4ae82bd00f977a',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'probe:3b752d5e95a14bb1a006e11ef15a0c4f': '3b752d5e95a14bb1a006e11ef15a0c4f',\n",
-       "  'probe:eb428de207d744849a04a8779095e060': 'eb428de207d744849a04a8779095e060',\n",
-       "  'probe:2f6832e4c7e249f49be40fd0ae075ab1': '2f6832e4c7e249f49be40fd0ae075ab1',\n",
-       "  'epoch:1e0b60468a98402886f1e6107ce36b37': '1e0b60468a98402886f1e6107ce36b37',\n",
-       "  'channel:6bf219f1c935472eaacc74a5a7486f68': '6bf219f1c935472eaacc74a5a7486f68',\n",
-       "  'doc': 'd056d1563c6f467eabcf2e131c94d254',\n",
-       "  'probe:b51534cda5fa484ea78167bab5e96c30': 'b51534cda5fa484ea78167bab5e96c30',\n",
-       "  'probe:1fc2dd3a11754df9972f5e8312574b24': '1fc2dd3a11754df9972f5e8312574b24',\n",
-       "  'probe:0225f974c5834b95aea35771465e3ddd': '0225f974c5834b95aea35771465e3ddd',\n",
-       "  'epoch:582fc54a2b9a456cb190e6c7a52e3c25': '582fc54a2b9a456cb190e6c7a52e3c25',\n",
-       "  'channel:45e17337514b4193a87344b35c118046': '45e17337514b4193a87344b35c118046',\n",
-       "  'probe:8f04464c31db4e80aa774b1c29a3df7d': '8f04464c31db4e80aa774b1c29a3df7d',\n",
-       "  'probe:524806b0864347dea34e18b2502ee45a': '524806b0864347dea34e18b2502ee45a',\n",
-       "  'probe:12631e8c294649669a764950612b325c': '12631e8c294649669a764950612b325c',\n",
-       "  'epoch:a78dc1900e05422b9ec096fd2126078a': 'a78dc1900e05422b9ec096fd2126078a',\n",
-       "  'channel:39184e209ba64bff8a7ca52ac7ad18fe': '39184e209ba64bff8a7ca52ac7ad18fe',\n",
-       "  'probe:acd03d3919234761b63c747f995e4169': 'acd03d3919234761b63c747f995e4169',\n",
-       "  'probe:93c41db8bc3449f98960abcea9cd5500': '93c41db8bc3449f98960abcea9cd5500',\n",
-       "  'probe:d1f6a951f70946ab9c8a084a30127c7e': 'd1f6a951f70946ab9c8a084a30127c7e',\n",
-       "  'epoch:f4cfac4b525f433d9e1543e1f249052e': 'f4cfac4b525f433d9e1543e1f249052e',\n",
-       "  'channel:1872ebe466254f10a274cf72f9f563b7': '1872ebe466254f10a274cf72f9f563b7',\n",
-       "  'probe:062e9bcb22eb4d458172737a9a400f5b': '062e9bcb22eb4d458172737a9a400f5b',\n",
-       "  'probe:3df56b1389f144e79b3d492318d29628': '3df56b1389f144e79b3d492318d29628',\n",
-       "  'probe:c42feccbc9c34e04a8621614e472c68e': 'c42feccbc9c34e04a8621614e472c68e',\n",
-       "  'epoch:88e26b3512974c05abda353fc0121a9b': '88e26b3512974c05abda353fc0121a9b',\n",
-       "  'channel:419094bd2dea49fcb9ae580654ccbe45': '419094bd2dea49fcb9ae580654ccbe45'},\n",
-       " 'daq_systems': ['186c8931028142e0b1eb1a6e4f44284b',\n",
-       "  '8c78a89b3ccc488fa30b32bf2c9abe8d',\n",
-       "  '54e0b3dbafe04d2eaab8f266ef822b51',\n",
-       "  'f23df560e32547b0900a6bd709be79ac',\n",
-       "  'a876a85c0dac4d8f80b5146c42e30cb5',\n",
-       "  '2858f86f1959476e9dde4042429df6c4',\n",
-       "  '2b3a04e8423b41669ebb68de13661b13',\n",
-       "  '6b20460f379a4590b8c800b2ce58e2d4',\n",
-       "  '764562aa5e7045a2b25747faed56a105',\n",
-       "  '304e2fa20b894acf8455e0e0ad0235c3']}"
+       " '_dependencies': {},\n",
+       " '_depends_on': [],\n",
+       " 'daq_systems': ['35741023fe8a43b9912480ccc92d7346',\n",
+       "  '1188176507e04f05bb7bf252c745d753']}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,43 +415,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Warning",
-     "evalue": "New Experiment <ndi.experiment.Experiment object at 0x115d85ca0> added to database. To prevent this warning, set argument new_experiment to True.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mWarning\u001b[0m                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-51917b6b00fd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m Experiment('test_dfjslfjdkf').connect(\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mdatabase\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdb\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mbinary_collection\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m ).document.data\n",
-      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/experiment.py\u001b[0m in \u001b[0;36mconnect\u001b[0;34m(self, database, binary_collection, new_experiment)\u001b[0m\n\u001b[1;32m     57\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnew_experiment\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mWarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'New Experiment {self} added to database. To prevent this warning, set argument new_experiment to True.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdocument\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mbinary_collection\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mWarning\u001b[0m: New Experiment <ndi.experiment.Experiment object at 0x115d85ca0> added to database. To prevent this warning, set argument new_experiment to True."
-     ]
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
+       "  'type': 'ndi_experiment',\n",
+       "  'experiment_id': 'ae6786fff5214f96be540090cfded7d6',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {},\n",
+       " '_depends_on': [],\n",
+       " 'daq_systems': []}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "Experiment('test_dfjslfjdkf').connect(\n",
     "    database=db,\n",
-    "    binary_collection=bc\n",
+    "    binary_collection=bc,\n",
+    "    new_experiment=True\n",
     ").document.data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "destroy_everything_in(db)"
+    "db.find_by_id('ldsfjslkdfjlksdjflk')"
    ]
   },
   {
