channel, epoch, probe methods

--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -102,7 +102,7 @@
     "probes = [\n",
     "    Probe('p0', 0, 'ntrode', daq_system_id=daqs[0].id),\n",
     "    Probe('p1', 1, 'ntrode', daq_system_id=daqs[0].id),\n",
-    "    Probe('p2', 2, 'ntrode', daq_system_id=daqs[1].id),\n",
+    "    Probe('p2', 2, 'ntrode', daq_system_id=daqs[0].id),\n",
     "]\n",
     "\n",
     "for p in probes:\n",
@@ -117,9 +117,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.probe.Probe at 0x112cd05b0>,\n",
-       " <ndi.probe.Probe at 0x110ecfd60>,\n",
-       " <ndi.probe.Probe at 0x110f09f70>]"
+       "[<ndi.probe.Probe at 0x11d01d370>,\n",
+       " <ndi.probe.Probe at 0x11d0433d0>,\n",
+       " <ndi.probe.Probe at 0x11d043f70>]"
       ]
      },
      "execution_count": 9,
@@ -135,53 +135,44 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'_metadata': {'name': 'p0',\n",
-       "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'f9116eb187504ccf8e4ae82bd00f977a',\n",
-       "   'parent_id': '',\n",
-       "   'asc_path': '',\n",
-       "   'version_depth': 0,\n",
-       "   'latest_version': True},\n",
-       "  '_dependencies': {},\n",
-       "  '_depends_on': [],\n",
-       "  'reference': 0,\n",
-       "  'daq_system_id': '35741023fe8a43b9912480ccc92d7346',\n",
-       "  'type': 'ntrode'},\n",
-       " {'_metadata': {'name': 'p1',\n",
-       "   'type': 'ndi_probe',\n",
-       "   'experiment_id': 'f9116eb187504ccf8e4ae82bd00f977a',\n",
-       "   'parent_id': '',\n",
-       "   'asc_path': '',\n",
-       "   'version_depth': 0,\n",
-       "   'latest_version': True},\n",
-       "  '_dependencies': {},\n",
-       "  '_depends_on': [],\n",
-       "  'reference': 1,\n",
-       "  'daq_system_id': '35741023fe8a43b9912480ccc92d7346',\n",
-       "  'type': 'ntrode'}]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "[p.document.data for p in exp.find_probes(Q('reference') < 2)]"
+    "channels0 = [\n",
+    "    Channel('p0c0', 0, 'time', 'file0'),\n",
+    "    Channel('p0c1', 1, 'digital_out', 'file0'),\n",
+    "    Channel('p0c2', 2, 'mark', 'file0'),\n",
+    "]\n",
+    "channels1 = [\n",
+    "    Channel('p1c0', 0, 'time', 'file1'),\n",
+    "    Channel('p1c1', 1, 'digital_out', 'file1'),\n",
+    "    Channel('p1c2', 2, 'mark', 'file1'),\n",
+    "]\n",
+    "for c in channels0:\n",
+    "    probes[0].add_channel(c)\n",
+    "for c in channels1:\n",
+    "    probes[1].add_channel(c)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.document.Document at 0x11d04cdc0>,\n",
+       " <ndi.document.Document at 0x11d04c7c0>,\n",
+       " <ndi.document.Document at 0x11d04cdf0>]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "epoch = Epoch(daqs[0].id)\n",
-    "exp.add_epoch(epoch)"
+    "probes[0].get_channels()"
    ]
   },
   {
@@ -192,46 +183,15 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.epoch.Epoch at 0x1137cc8b0>]"
+       "[<ndi.channel.Channel at 0x11d04c340>,\n",
+       " <ndi.channel.Channel at 0x11d04c6d0>,\n",
+       " <ndi.channel.Channel at 0x11d067d00>,\n",
+       " <ndi.channel.Channel at 0x11d067a00>,\n",
+       " <ndi.channel.Channel at 0x11d0673d0>,\n",
+       " <ndi.channel.Channel at 0x11d067670>]"
       ]
      },
      "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exp.get_epochs()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "channels = [\n",
-    "    Channel('c0', 0, 'mark', 'f', \n",
-    "            epoch_id=epoch.id,\n",
-    "            probe_id=probes[0].id,\n",
-    "            daq_system_id=daqs[0].id)\n",
-    "]\n",
-    "for c in channels:\n",
-    "    exp.add_channel(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<ndi.channel.Channel at 0x1138109a0>]"
-      ]
-     },
-     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,41 +202,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = [\n",
+    "    Epoch(daq_system_id=daqs[0].id),\n",
+    "    Epoch(daq_system_id=daqs[0].id)\n",
+    "]\n",
+    "for e in epochs:\n",
+    "    exp.add_epoch(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.epoch.Epoch at 0x110a584c0>, <ndi.epoch.Epoch at 0x110a582b0>]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp.get_epochs()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
-    "exp.add_document(doc)"
+    "for channel in channels0:\n",
+    "    epochs[0].link_channel(channel)\n",
+    "    epochs[1].link_channel(channel)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_metadata': {'name': 'doc',\n",
-       "  'type': 'independent',\n",
-       "  'experiment_id': 'f9116eb187504ccf8e4ae82bd00f977a',\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': '',\n",
-       "  'version_depth': 0,\n",
-       "  'latest_version': True},\n",
-       " '_dependencies': {},\n",
-       " '_depends_on': ['f9116eb187504ccf8e4ae82bd00f977a'],\n",
-       " 'hello': 'world'}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "exp.ctx.find_by_id(doc.id).data"
+    "for channel in channels1:\n",
+    "    epochs[0].link_channel(channel.id)"
    ]
   },
   {
@@ -287,10 +263,95 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x11380e430>}"
+       "[<ndi.document.Document at 0x11d04c190>,\n",
+       " <ndi.document.Document at 0x110a58040>,\n",
+       " <ndi.document.Document at 0x11d043d30>,\n",
+       " <ndi.document.Document at 0x11d0439d0>,\n",
+       " <ndi.document.Document at 0x11d0435e0>,\n",
+       " <ndi.document.Document at 0x11d043a30>]"
       ]
      },
      "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "epochs[0].get_channels()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.document.Document at 0x11d070d60>,\n",
+       " <ndi.document.Document at 0x11d05a970>]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "channels0[0].get_epochs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = Document({'hello': 'world'}, name='doc', type_='independent')\n",
+    "exp.add_document(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_metadata': {'name': 'doc',\n",
+       "  'type': 'independent',\n",
+       "  'experiment_id': '2ec6047dbd2f4f3aa07d640c72ed4162',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {},\n",
+       " '_depends_on': ['2ec6047dbd2f4f3aa07d640c72ed4162'],\n",
+       " 'hello': 'world'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp.ctx.find_by_id(doc.id).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'doc': <ndi.document.Document at 0x11d05ad60>}"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,14 +362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d0cb939cf6504e4981ce5e0472ef6591\n"
+      "db6182416c2a4a568f88fdca56ebcdf8\n"
      ]
     }
    ],
@@ -319,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +389,7 @@
        "{}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +411,7 @@
        "'This object has been deleted.'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,10 +429,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_metadata': {'name': 'list-doc',\n",
+       "   'type': '',\n",
+       "   'experiment_id': '',\n",
+       "   'parent_id': '',\n",
+       "   'asc_path': '',\n",
+       "   'version_depth': 0,\n",
+       "   'latest_version': True},\n",
+       "  '_dependencies': {},\n",
+       "  '_depends_on': [],\n",
+       "  'list': ['abc', 'def', 'ghi']}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc = Document({\"list\": [\"abc\", \"def\", \"ghi\"]}, 'list-doc')\n",
+    "db.add(doc)\n",
+    "[d.data for d in db.find(Q('list').contains('def'))]"
+   ]
   },
   {
    "cell_type": "code",
@@ -382,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -390,18 +475,18 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'f9116eb187504ccf8e4ae82bd00f977a',\n",
+       "  'experiment_id': '2ec6047dbd2f4f3aa07d640c72ed4162',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
        " '_depends_on': [],\n",
-       " 'daq_systems': ['35741023fe8a43b9912480ccc92d7346',\n",
-       "  '1188176507e04f05bb7bf252c745d753']}"
+       " 'daq_system_ids': ['a77649a40b8840c2aa54a6b231a0a479',\n",
+       "  'b24ab1ff043542c78d823a3f4ce25484']}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -423,17 +508,17 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'ae6786fff5214f96be540090cfded7d6',\n",
+       "  'experiment_id': 'b3cd2cabbdc44aba9f0d1c9ef358a0b5',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
        " '_depends_on': [],\n",
-       " 'daq_systems': []}"
+       " 'daq_system_ids': []}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,12 +533,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "db.find_by_id('ldsfjslkdfjlksdjflk')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
