update connect documentation

--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -66,7 +66,7 @@
     "exp = Experiment('test_experiment').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
-    "    new_experiment=True\n",
+    "    load_existing=False\n",
     ")"
    ]
   },
@@ -117,9 +117,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.probe.Probe at 0x11d01d370>,\n",
-       " <ndi.probe.Probe at 0x11d0433d0>,\n",
-       " <ndi.probe.Probe at 0x11d043f70>]"
+       "[<ndi.probe.Probe at 0x11a9f7c10>,\n",
+       " <ndi.probe.Probe at 0x11a9f7130>,\n",
+       " <ndi.probe.Probe at 0x11a9f75e0>]"
       ]
      },
      "execution_count": 9,
@@ -161,9 +161,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11d04cdc0>,\n",
-       " <ndi.document.Document at 0x11d04c7c0>,\n",
-       " <ndi.document.Document at 0x11d04cdf0>]"
+       "[<ndi.document.Document at 0x11aa0b610>,\n",
+       " <ndi.document.Document at 0x11aa0b250>,\n",
+       " <ndi.document.Document at 0x11a9f7b20>]"
       ]
      },
      "execution_count": 11,
@@ -183,12 +183,12 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.channel.Channel at 0x11d04c340>,\n",
-       " <ndi.channel.Channel at 0x11d04c6d0>,\n",
-       " <ndi.channel.Channel at 0x11d067d00>,\n",
-       " <ndi.channel.Channel at 0x11d067a00>,\n",
-       " <ndi.channel.Channel at 0x11d0673d0>,\n",
-       " <ndi.channel.Channel at 0x11d067670>]"
+       "[<ndi.channel.Channel at 0x10e44b430>,\n",
+       " <ndi.channel.Channel at 0x11a9f7bb0>,\n",
+       " <ndi.channel.Channel at 0x11a9f7b50>,\n",
+       " <ndi.channel.Channel at 0x11aa40340>,\n",
+       " <ndi.channel.Channel at 0x11aa40520>,\n",
+       " <ndi.channel.Channel at 0x11aa401c0>]"
       ]
      },
      "execution_count": 12,
@@ -222,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.epoch.Epoch at 0x110a584c0>, <ndi.epoch.Epoch at 0x110a582b0>]"
+       "[<ndi.epoch.Epoch at 0x11aa48d60>, <ndi.epoch.Epoch at 0x11aa48970>]"
       ]
      },
      "execution_count": 14,
@@ -263,12 +263,12 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11d04c190>,\n",
-       " <ndi.document.Document at 0x110a58040>,\n",
-       " <ndi.document.Document at 0x11d043d30>,\n",
-       " <ndi.document.Document at 0x11d0439d0>,\n",
-       " <ndi.document.Document at 0x11d0435e0>,\n",
-       " <ndi.document.Document at 0x11d043a30>]"
+       "[<ndi.document.Document at 0x11a9f7dc0>,\n",
+       " <ndi.document.Document at 0x11a9f79a0>,\n",
+       " <ndi.document.Document at 0x11aa59520>,\n",
+       " <ndi.document.Document at 0x11aa599a0>,\n",
+       " <ndi.document.Document at 0x11aa595e0>,\n",
+       " <ndi.document.Document at 0x11aa596d0>]"
       ]
      },
      "execution_count": 17,
@@ -288,8 +288,8 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11d070d60>,\n",
-       " <ndi.document.Document at 0x11d05a970>]"
+       "[<ndi.document.Document at 0x11aa6e3d0>,\n",
+       " <ndi.document.Document at 0x11aa6e5e0>]"
       ]
      },
      "execution_count": 18,
@@ -321,13 +321,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': '2ec6047dbd2f4f3aa07d640c72ed4162',\n",
+       "  'experiment_id': '245374cbc51b4a898a3f6f46eb6fc794',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['2ec6047dbd2f4f3aa07d640c72ed4162'],\n",
+       " '_depends_on': ['245374cbc51b4a898a3f6f46eb6fc794'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -348,7 +348,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x11d05ad60>}"
+       "{'doc': <ndi.document.Document at 0x11aa488e0>}"
       ]
      },
      "execution_count": 21,
@@ -369,7 +369,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "db6182416c2a4a568f88fdca56ebcdf8\n"
+      "f16cd21999134619b1cef16e209abb2f\n"
      ]
     }
    ],
@@ -475,15 +475,15 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '2ec6047dbd2f4f3aa07d640c72ed4162',\n",
+       "  'experiment_id': '245374cbc51b4a898a3f6f46eb6fc794',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
        " '_depends_on': [],\n",
-       " 'daq_system_ids': ['a77649a40b8840c2aa54a6b231a0a479',\n",
-       "  'b24ab1ff043542c78d823a3f4ce25484']}"
+       " 'daq_system_ids': ['6f5ca96e7fe64116b3743d89ade4e5f9',\n",
+       "  '5595e02d1404414d9f524e87666cf738']}"
       ]
      },
      "execution_count": 26,
@@ -494,7 +494,8 @@
    "source": [
     "Experiment('test_experiment').connect(\n",
     "    database=db,\n",
-    "    binary_collection=bc\n",
+    "    binary_collection=bc,\n",
+    "    load_existing=True\n",
     ").document.data"
    ]
   },
@@ -508,7 +509,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'b3cd2cabbdc44aba9f0d1c9ef358a0b5',\n",
+       "  'experiment_id': 'f2c4cc1ad78e4e369b445f9a4ef35666',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -527,7 +528,7 @@
     "Experiment('test_dfjslfjdkf').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc,\n",
-    "    new_experiment=True\n",
+    "    load_existing=False\n",
     ").document.data"
    ]
   },
